# Socket-Chat

./: .clangd  CMakeLists.txt  README.MD  compile_commands.json
Client-Side/: a.out
Client-Side/include/: client_buffer.hpp  client_receive.hpp
Client-Side/src/: client_side.cpp  client_ui.cpp  nClient.cpp
Server-Side/include/: buffer_history.hpp  client_collection.hpp  client_identity.hpp  server_output.hpp
Server-Side/src/: Server.cpp
include/: buffer_history.hpp  client_buffer.hpp  client_receive.cpp  client_receive.hpp  heartbeat_ping.hpp  server_output.hpp
src/: Server.cpp  client_side.cpp
